syntax = "proto3";
package node;

option go_package = "github.com/aos-dev/noah/proto";

service Node {
    rpc Register (RegisterRequest) returns (RegisterReply) {
    }
    rpc Upgrade (UpgradeRequest) returns (UpgradeReply) {
    }
}

message RegisterRequest {
    string id = 1;
    string addr = 2;
}

message RegisterReply {
    string addr = 1;
    string subject = 2;
}

message UpgradeRequest {
    string node_id = 1;
    string task_id = 2;
}

message UpgradeReply {
    string node_id = 1;
    string addr = 2;
    string subject = 3;
}
